; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/xilinx/extr_zynqmp_dma.c_zynqmp_dma_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/xilinx/extr_zynqmp_dma.c_zynqmp_dma_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zynqmp_dma_chan = type { i64 }

@ZYNQMP_DMA_IDS_DEFAULT_MASK = common dso_local global i32 0, align 4
@ZYNQMP_DMA_IDS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.zynqmp_dma_chan*)* @zynqmp_dma_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zynqmp_dma_reset(%struct.zynqmp_dma_chan* %0) #0 {
  %2 = alloca %struct.zynqmp_dma_chan*, align 8
  store %struct.zynqmp_dma_chan* %0, %struct.zynqmp_dma_chan** %2, align 8
  %3 = load i32, i32* @ZYNQMP_DMA_IDS_DEFAULT_MASK, align 4
  %4 = load %struct.zynqmp_dma_chan*, %struct.zynqmp_dma_chan** %2, align 8
  %5 = getelementptr inbounds %struct.zynqmp_dma_chan, %struct.zynqmp_dma_chan* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @ZYNQMP_DMA_IDS, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @writel(i32 %3, i64 %8)
  %10 = load %struct.zynqmp_dma_chan*, %struct.zynqmp_dma_chan** %2, align 8
  %11 = call i32 @zynqmp_dma_complete_descriptor(%struct.zynqmp_dma_chan* %10)
  %12 = load %struct.zynqmp_dma_chan*, %struct.zynqmp_dma_chan** %2, align 8
  %13 = call i32 @zynqmp_dma_chan_desc_cleanup(%struct.zynqmp_dma_chan* %12)
  %14 = load %struct.zynqmp_dma_chan*, %struct.zynqmp_dma_chan** %2, align 8
  %15 = call i32 @zynqmp_dma_free_descriptors(%struct.zynqmp_dma_chan* %14)
  %16 = load %struct.zynqmp_dma_chan*, %struct.zynqmp_dma_chan** %2, align 8
  %17 = call i32 @zynqmp_dma_init(%struct.zynqmp_dma_chan* %16)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @zynqmp_dma_complete_descriptor(%struct.zynqmp_dma_chan*) #1

declare dso_local i32 @zynqmp_dma_chan_desc_cleanup(%struct.zynqmp_dma_chan*) #1

declare dso_local i32 @zynqmp_dma_free_descriptors(%struct.zynqmp_dma_chan*) #1

declare dso_local i32 @zynqmp_dma_init(%struct.zynqmp_dma_chan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
